# mcp-rust-proxy

./: .claude-uuid-session  .claude.json  .devenv.flake.nix  .envrc  .gitignore  .mcp.json  CACHIX_SETUP.md  CHANGELOG.md  CLAUDE.md  CLAUDE_HOOKS_INTEGRATION.md  CLAUDE_PROXY_USAGE.md  CODE_AND_SECURITY_REVIEW.md  COMPLETE_INTEGRATION_SUMMARY.md  Cargo.toml  HTTP_SSE_USAGE.md  IMPLEMENTATION_REVIEW.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  LICENSE  MCP_ADVANCED_FEATURES_PLAN.md  MCP_PROTOCOL_COMPLIANCE_PLAN.md  MCP_PROTOCOL_DOCUMENTATION_INDEX.md  MCP_RESEARCH_SUMMARY.md  MCP_TRANSLATION_TEST_SPEC.md  MCP_VERSION_COMPARISON.md  MCP_VERSION_COMPATIBILITY_PLAN.md  MCP_VERSION_DIFFERENCES_QUICK_REF.md  PLUGIN_INSTALLATION.md  PLUGIN_QUICKSTART.md  PROJECT_SNAPSHOT_2025-10-28.md  README.md  SECURE_IMPLEMENTATION_EXAMPLES.txt  SECURITY_AUDIT_REPORT.md  SERENA_FIX_SUMMARY.md  TLS_SNI_FIX.md  TRACING_TOOLS_QUICKSTART.md  build-with-ui.sh  build-yew-ui.sh  build.rs  claude-proxy-test.yaml  (+34 more)
.cargo/: config.toml
.claude/: settings.json  settings.json.bkup  settings.local.json
.claude-plugin/: README.md  plugin.json
.claude-plugin/commands/: mcp-proxy-end-session.md  mcp-proxy-quality-report.md  mcp-proxy-start-session.md
.claude/commands/: mcp-proxy-give-feedback.md  mcp-proxy-show-trace.md
.claude/hooks/: post-tool-use.sh  session-end.sh  session-start.sh
.github/workflows/: ci.yml  release-nix.yml  release.yml
.serena/: project.yml
.specify/memory/: constitution.md
benches/: protocol_benchmarks.rs
configs/examples/: advanced.yaml  demo.yaml
crates/mcp-proxy-cli/: Cargo.toml
crates/mcp-proxy-cli/src/: main.rs
crates/mcp-proxy-core/: Cargo.toml
crates/mcp-proxy-core/src/: error.rs  lib.rs  state.rs
crates/mcp-proxy-core/src/config/: schema.rs
crates/mcp-proxy-core/src/protocol/: mod.rs
crates/mcp-proxy-core/src/transport/: http_sse.rs  mod.rs  pool.rs  stdio.rs  websocket.rs
crates/mcp-proxy-server/: Cargo.toml
crates/mcp-proxy-server/src/: lib.rs  main.rs
crates/mcp-proxy-server/src/logging/: mod.rs
crates/mcp-proxy-server/src/proxy/: cache_tests.rs  handler.rs  mod.rs  router.rs  tests.rs
crates/mcp-proxy-server/src/server/: health.rs  health_tests.rs  health_tracking_tests.rs  lifecycle.rs  mod.rs
crates/mcp-proxy-server/src/state/: disabled_servers.rs  mod.rs  server_state_tests.rs
crates/mcp-proxy-server/src/web/: api.rs  api_tests.rs  mod.rs  ws_tests.rs
crates/mcp-proxy-shared/: Cargo.toml
crates/mcp-proxy-shared/src/: lib.rs
docs/: CLAUDE.md  MCP_PROXY_README.md  PLUGIN_DEPLOYMENT.md  YEW_UI_INTEGRATION.md  per-project-server-state.md  tauri-backend-integration.md
examples/configs/: chaining-config.yaml  full-plugin-example.yaml  official-plugins.yaml  plugin-config.yaml  security-config.yaml
examples/plugins/: curation-plugin.js  logging-plugin.js  package.json  security-plugin.js
specs/001-context-tracing-framework/: COMPLETION_REPORT.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-javascript-plugin-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-mcp-protocol-support/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-aggregator-plugin-type/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-claude-api-proxy/: IMPLEMENTATION_COMPLETE.md  README.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: commands.rs  error.rs  lib.rs  main.rs  test_utils.rs
src/claude_proxy/: attribution.rs  capture.rs  config.rs  mod.rs  proxy_server.rs  tls_handler.rs
src/commands/: check.rs  mod.rs
src/config/: loader.rs  mod.rs  overrides.rs  schema.rs
src/context/: error.rs  evolution.rs  feedback.rs  mod.rs  query.rs  storage.rs  tracker.rs  types.rs
src/logging/: mod.rs
src/plugin/: chain.rs  config.rs  manager.rs  mod.rs  process.rs  schema.rs
src/protocol/: adapter.rs  error.rs  handshake.rs  mod.rs  state.rs  tests.rs  version.rs
src/proxy/: aggregator_tools.rs  cache_tests.rs  cache_warmer.rs  handler.rs  mod.rs  prompts.rs  resources.rs  router.rs  server_tools.rs  tests.rs  tracing_tools.rs
src/server/: health.rs  health_tests.rs  health_tracking_tests.rs  lifecycle.rs  mod.rs
src/state/: disabled_servers.rs  metrics.rs  mod.rs  server_state_tests.rs
src/test_utils/: mod.rs
src/transport/: http_sse.rs  (+4 more)
tauri-app/: IMPLEMENTATION_SUMMARY.md  README.md  SETUP_STATUS.md  build.sh  dev.sh  package-lock.json  package.json  test-setup.sh
tauri-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
tauri-app/src-tauri/src/: backend_manager.rs  commands.rs  events.rs  logs.rs  main.rs  proxy.rs  state.rs
tauri-app/src-tauri/tests/: integration_test.rs
tests/: adapter_v20241105_v20250618_tests.rs  automated_tracing_test.sh  claude_tracing_integration.sh  content_translation_tests.rs  context_integration_test.rs  initialization_integration_tests.rs  integration_tests.rs  logs_api_test.rs  mcp_compliance_test.rs  multi_version_stress_test.rs  plugin_chaining_test.rs  plugin_curation_test.rs  plugin_end_to_end_test.rs  plugin_prompt_injection_test.rs  plugin_security_test.rs  plugin_unit_tests.rs  protocol_adapter_tests.rs  protocol_handshake_tests.rs  protocol_state_tests.rs  protocol_version_tests.rs  real_claude_integration_test.sh  real_claude_integration_test.sh.bak  real_claude_integration_test.sh.bak2  resource_translation_tests.rs  serena_integration_test.rs  simple_integration_test.rs  tool_translation_tests.rs  translation_integration_tests.rs  us1_acceptance_tests.rs  us2_acceptance_tests.rs  version_negotiation_tests.rs
web-ui/: app.js  index.html  style.css
yew-ui/: .gitignore  Cargo.toml  README.md  Trunk.toml  build.sh  index.html  style.css
yew-ui/.cargo/: config.toml
yew-ui/src/: main.rs
yew-ui/src/api/: log_stream.rs  mod.rs  websocket.rs
yew-ui/src/components/: app.rs  config_helper.rs  header.rs  logs_modal.rs  metrics.rs  mod.rs  modal.rs  server_card.rs  servers_list.rs
yew-ui/src/types/: mod.rs
(+66 files in other folders)
