[package]
name = "mcp-rust-proxy"
version = "0.1.0"
edition = "2021"
authors = ["MCP Rust Proxy Contributors"]
description = "A fast and efficient Model Context Protocol (MCP) proxy server"
license = "MIT"
repository = "https://github.com/zach-source/mcp-rust-proxy"
build = "build.rs"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "compat"] }
tokio-stream = "0.1"
futures = "0.3"

# Web framework
warp = "0.3"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Configuration
figment = { version = "0.10", features = ["env", "toml", "json", "yaml"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Data structures
dashmap = "6.0"
arc-swap = "1.7"
bytes = "1.7"

# Connection pooling
bb8 = "0.8"
deadpool = "0.12"

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing-appender = "0.2"
dirs = "5.0"
num_cpus = "1.16"
async-trait = "0.1"
regex = "1.10"
clap = { version = "4.4", features = ["derive"] }

# Process management
nix = { version = "0.29", features = ["process", "signal"] }

# HTTP/WebSocket clients
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio-tungstenite = "0.24"

# Metrics
prometheus = "0.13"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
mockall = "0.13"
tempfile = "3.12"
tokio-test = "0.4"

