[workspace]
members = [
    "crates/mcp-proxy-core",
    "crates/mcp-proxy-server", 
    "crates/mcp-proxy-shared",
    "crates/mcp-proxy-cli",
    "tauri-app/src-tauri",
    "yew-ui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["MCP Proxy Team"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/mcp-rust-proxy"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP and WebSocket
warp = "0.3"
hyper = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
reqwest = { version = "0.12", features = ["json", "stream"] }

# State management
dashmap = "6"
arc-swap = "1.7"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
futures = "0.3"
async-trait = "0.1"

# Testing
mockall = "0.13"
tempfile = "3"
pretty_assertions = "1"

# Internal crates
mcp-proxy-core = { path = "crates/mcp-proxy-core" }
mcp-proxy-server = { path = "crates/mcp-proxy-server" }
mcp-proxy-shared = { path = "crates/mcp-proxy-shared" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 2