[package]
name = "mcp-proxy-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
    "Window",
    "Document",
    "HtmlElement",
    "HtmlInputElement",
    "Location",
    "Storage",
    "console",
    "Event",
    "MouseEvent",
    "InputEvent",
    "Element",
    "DomTokenList"
] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-net = "0.6"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
futures = "0.3"

