[package]
name = "mcp-proxy-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mcp-proxy"
path = "src/main.rs"

[dependencies]
# Internal dependencies
mcp-proxy-core.workspace = true
mcp-proxy-server.workspace = true
mcp-proxy-shared.workspace = true

# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

# Error handling
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Utilities
dirs.workspace = true
colored = "2"

[dev-dependencies]
tempfile.workspace = true
pretty_assertions.workspace = true