[package]
name = "mcp-proxy-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Async
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
async-trait.workspace = true

# HTTP/WebSocket
hyper.workspace = true
tokio-tungstenite.workspace = true
reqwest.workspace = true

# Logging
tracing.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
dirs.workspace = true
regex = "1.11"
warp = "0.3"
bytes = "1.10"
which = "6"
http = "1.3"
figment = { version = "0.10", features = ["yaml", "json", "toml", "env"] }
dashmap = "6.1"
nix = { version = "0.29", features = ["process", "signal"] }

# Process management
tokio-process = "0.2"

[dev-dependencies]
mockall.workspace = true
tempfile.workspace = true
pretty_assertions.workspace = true