[package]
name = "mcp-proxy-shared"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling  
thiserror.workspace = true

# Utilities
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true