[package]
name = "mcp-proxy-tauri"
version = "0.1.0"
description = "MCP Proxy Desktop Application"
authors = ["MCP Proxy Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"

# Import proxy crates
mcp-proxy-core = { path = "../../crates/mcp-proxy-core" }
mcp-proxy-server = { path = "../../crates/mcp-proxy-server" }
mcp-proxy-shared = { path = "../../crates/mcp-proxy-shared" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "mcp-proxy-tauri"
path = "src/main.rs"
